# rigor-foundry

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrep.yml  .zenodo.json  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  VALIDATION.md  _typos.toml  action.yml  coverage-residuals.json  docker-compose.yml  index.html  mkdocs.yml  module-size-decisions.json  pyproject.toml  requirements-dev.txt  requirements.txt  rigor-foundry-policy.json  rigor-public-api.json  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  dependency-waivers.json  pull_request_template.md  release.yml
adapter-catalogue/: index.html
adapter-profiles/: index.html
api-compatibility-rules/: index.html
api-stability/: index.html
application-security-rules/: index.html
architecture/: index.html
assisted-review/: index.html
benchmarks/: adapter_profiles.py
calibration-evidence-1.0/: index.html
claim-isolation/: index.html
cli/: index.html
compliance-maps/: index.html
configuration/: index.html
container-rules/: index.html
cra-reporting/: index.html
cra-rules/: index.html
cross-repository-campaigns/: index.html
data-privacy-rules/: index.html
digest-dependencies/: index.html
docs/: adapter-catalogue.md  adapter-profiles.md  api-compatibility-rules.md  api-stability.md  application-security-rules.md  architecture.md  assisted-review.md  calibration-evidence-1.0.md  claim-isolation.md  cli.md  compliance-maps.md  configuration.md  container-rules.md  cra-reporting.md  cra-rules.md  cross-repository-campaigns.md  data-privacy-rules.md  digest-dependencies.md  documentation-rules.md  fuzzing.md  getting-started.md  index.md  integrations.md  offline-verification.md  operations-observability-rules.md  performance-reproducibility-rules.md  polyglot-capability-matrix.md  reliability-rules.md  remediation-executor.md  report-diff.md  sarif.md  scientific-numerical-rules.md  security.md  source-provenance.md  stable-contract-1.0.md  supply-chain-rules.md  validation.md  vscode-integration.md
documentation-rules/: index.html
downloads/: rigor-foundry.csv
fuzz/: _record_fuzz.py  fuzz_audit_policy.py  fuzz_audit_report.py  fuzz_candidate.py  fuzz_review_record.py
fuzzing/: index.html
getting-started/: index.html
integrations/: index.html
offline-verification/: index.html
operations-observability-rules/: index.html
performance-reproducibility-rules/: index.html
polyglot-capability-matrix/: index.html
reliability-rules/: index.html
remediation-executor/: index.html
report-diff/: index.html
requirements/: build.in  build.txt  ci.in  ci.txt  fuzz.in  fuzz.txt  javascript.in  javascript.txt  native.in  native.txt  runtime.in  runtime.txt  security.in  security.txt  test.in  test.txt
sarif/: index.html
scientific-numerical-rules/: index.html
search/: search_index.json
security/: index.html
source-provenance/: index.html
stable-contract-1.0/: index.html
supply-chain-rules/: index.html
tests/: campaign_compare_support.py  cli_test_support.py  offline_verification_fixtures.py  property_strategies.py  remediation_execution_support.py  repository_audit_git_repository.py  signing_fixtures.py  test_adapter_catalogue.py  test_adapter_profile_benchmark.py  test_adapter_profile_digest_dependencies.py  test_adapter_profiles.py  test_adapter_runtime.py  test_adapter_workspace.py  test_adapters.py  test_api_compatibility.py  test_api_stability.py  test_application_security.py  test_architecture.py  test_assisted_review.py  test_audit.py  test_audit_primitives.py  test_bootstrap.py  test_campaign_adapter_profiles.py  test_campaign_compare.py  (+133 more)
(+183 files in other folders)
